# DynamicxEcatTool

./: .gitignore  .gitmodules  CMakeLists.txt  DebugPage.qml  ErrorPopup.qml  Main.qml  ParamsConfigPage.qml  README.md  TestPage.qml  icons.rc  main.cpp  resources.qrc
Backend/: ConfigurationParserBase.cpp  ConfigurationParserBase.h  DeviceStatusModel.h  DxSlaveConfigurationParser.cpp  DxSlaveConfigurationParser.h  EcatSlaveConfigurationParser.cpp  EcatSlaveConfigurationParser.h  EthercatBackend.cpp  EthercatBackend.h  MitMotorCommand.cpp  MitMotorCommand.h  MotorStatusModel.h
Backend/EcatSlave/: RmEcatSlave.cpp  RmEcatSlave.h
Frontend/: Frontend.cpp  Frontend.h
SOEM_interface/: CMakeLists.txt
SOEM_interface/include/SOEM_interface/: EcatMasterBus.h  EcatSlaveBase.h  SoemUtils.h  soem_interface_export.h
SOEM_interface/src/SOEM_interface/: EcatMasterBus.cpp  EcatSlaveBase.cpp  SoemUtils.cpp
panels/: MITConfigPanel.qml
sample_config/: mit_slave_test.yaml  sentry2.yaml
sample_config/device_configurations/: mit_device_test.yaml  sentry2_gimbal.yaml  series_legged_gimbal.yaml
tutorial/: 1-测试界面.md  2-调试界面.md
